force-app/main/default/objects/WeekResearchResponse__c/WeekResearchResponse__c.object-meta.xml
<CustomObject>
    <label>门店调查反馈</label>
    <nameField>
        <displayFormat>WR-{YYYY}{MM}{DD}{000}</displayFormat>
        <label>门店调查反馈 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>门店调查反馈</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>