force-app/main/default/objects/WeekResearchResponse__c/fields/Daily_Report__c.field-meta.xml
<CustomField>
    <fullName>Daily_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Report</label>
    <referenceTo>Promoter_Daily_Report__c</referenceTo>
    <relationshipLabel>门店调查反馈</relationshipLabel>
    <relationshipName>JP_Daily</relationshipName>
    <type>Lookup</type>
</CustomField>