force-app/main/default/objects/WeekResearchResponse__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>结束日期</label>
    <type>Date</type>
</CustomField>