force-app/main/default/objects/WeekResearchResponse__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Shop__c + &apos;_&apos; + OwnerId + &apos;_&apos; + StartDate__c + &apos;_&apos; + EndDate__c</description>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>