force-app/main/default/objects/WeekResearchResponse__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>IF ( INCLUDES ( Daily_Report__r.Product_Line__c, &quot;TV&quot; ), &quot;TV; &quot;,null ) &amp;
IF ( INCLUDES ( Daily_Report__r.Product_Line__c , &quot;AC&quot; ), &quot;AC; &quot;,null ) &amp;
IF ( INCLUDES ( Daily_Report__r.Product_Line__c , &quot;WM&quot; ), &quot;WM; &quot;,null ) &amp;
IF ( INCLUDES ( Daily_Report__r.Product_Line__c , &quot;Sound Bar&quot; ), &quot;Sound Bar; &quot;,null ) &amp;
IF ( INCLUDES ( Daily_Report__r.Product_Line__c , &quot;Refrigerator&quot; ), &quot;Refrigerator; &quot;,null )</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>