force-app/main/default/objects/WeekResearchResponse__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>开始日期</label>
    <type>Date</type>
</CustomField>