force-app/main/default/objects/WeekResearchResponse__c/fields/WeekResearch__c.field-meta.xml
<CustomField>
    <fullName>WeekResearch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>门店调查要求</label>
    <referenceTo>Week_Research__c</referenceTo>
    <relationshipName>WeekResearch_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>